// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addFocusOverlay > should set the top overlay to the correct dimensions 1`] = `
<div
  class="go842373233 visual-builder__overlay__wrapper"
  data-testid="visual-builder__overlay__wrapper"
>
  <div
    class="visual-builder__overlay visual-builder__overlay--top go2262268276"
    data-testid="visual-builder__overlay--top"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--left go2262268276"
    data-testid="visual-builder__overlay--left"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--right go2262268276"
    data-testid="visual-builder__overlay--right"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--bottom go2262268276"
    data-testid="visual-builder__overlay--bottom"
  />
  <div
    class="visual-builder__overlay--outline go3391008271"
    data-testid="visual-builder__overlay--outline"
  />
</div>
`;

exports[`addFocusOverlay > should set the top overlay to the correct dimensions 2`] = `
<div
  class="go842373233 visual-builder__overlay__wrapper visible"
  data-testid="visual-builder__overlay__wrapper"
>
  <div
    class="visual-builder__overlay visual-builder__overlay--top go2262268276"
    data-testid="visual-builder__overlay--top"
    style="top: 0px; left: 0px; width: 100%; height: calc(10px);"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--left go2262268276"
    data-testid="visual-builder__overlay--left"
    style="left: 0px; top: 10px; width: 10px;"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--right go2262268276"
    data-testid="visual-builder__overlay--right"
    style="left: 20px; top: 10px; width: -20px;"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--bottom go2262268276"
    data-testid="visual-builder__overlay--bottom"
    style="top: 20px; height: -20px; left: 0px; width: 100%;"
  />
  <div
    class="visual-builder__overlay--outline go3391008271"
    data-testid="visual-builder__overlay--outline"
    style="top: 10px; left: 10px; outline-color: rgb(113, 92, 221);"
  />
</div>
`;

exports[`addFocusOverlay should set the top overlay to the correct dimensions 1`] = `
<div
  class="visual-builder__overlay__wrapper"
  data-testid="visual-builder__overlay__wrapper"
>
  <div
    class="visual-builder__overlay visual-builder__overlay--top"
    data-testid="visual-builder__overlay--top"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--left"
    data-testid="visual-builder__overlay--left"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--right"
    data-testid="visual-builder__overlay--right"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--bottom"
    data-testid="visual-builder__overlay--bottom"
  />
  <div
    class="visual-builder__overlay--outline"
    data-testid="visual-builder__overlay--outline"
  />
</div>
`;

exports[`addFocusOverlay should set the top overlay to the correct dimensions 2`] = `
<div
  class="visual-builder__overlay__wrapper visible"
  data-testid="visual-builder__overlay__wrapper"
>
  <div
    class="visual-builder__overlay visual-builder__overlay--top"
    data-testid="visual-builder__overlay--top"
    style="top: 0px; left: 0px; width: 100%; height: calc(10px - 2px);"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--left"
    data-testid="visual-builder__overlay--left"
    style="left: 0px; top: calc(10px - 2px); height: calc(undefinedpx + 4px); width: calc(10px - 2px);"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--right"
    data-testid="visual-builder__overlay--right"
    style="left: calc(20px + 2px); top: calc(10px - 2px); height: calc(undefinedpx + 4px); width: calc(1004px - 2px);"
  />
  <div
    class="visual-builder__overlay visual-builder__overlay--bottom"
    data-testid="visual-builder__overlay--bottom"
    style="top: calc(20px + 2px); height: calc(-20px - 2px); left: 0px; width: 100%;"
  />
  <div
    class="visual-builder__overlay--outline"
    data-testid="visual-builder__overlay--outline"
    style="top: 10px; left: 10px; outline-color: rgb(113, 92, 221);"
  />
</div>
`;
